--- a/package.json
+++ b/package.json
@@ -11,14 +11,19 @@
     "@vue/cli-service": "^5.0.8",
     "@vueform/vueform": "^1.3.2",
     "autoprefixer": "^10.4.14",
+    "firebase": "^9.19.1",
+    "pinia": "^2.0.34",
     "postcss": "^8.4.21",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.7",
+    "uuid": "^9.0.0",
     "vue": "^3.2.47",
-    "vue-router": "^4.1.6"
+    "vue-router": "^4.1.6",
+    "vuefire": "^3.1.0"
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/uuid": "^9.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
     "vite": "^4.1.4"
