--- a/package.json
+++ b/package.json
@@ -8,14 +8,19 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@tensorflow/tfjs": "^4.15.0",
     "@vue/cli-service": "^5.0.8",
     "@vueform/vueform": "^1.3.2",
     "autoprefixer": "^10.4.14",
+    "clmtrackr": "^1.1.2",
+    "colorjs.io": "^0.4.5",
+    "face-api.js": "^0.22.2",
     "firebase": "^9.19.1",
     "pinia": "^2.0.34",
     "postcss": "^8.4.21",
     "tailwind": "^4.0.0",
     "tailwindcss": "^3.2.7",
+    "tfjs": "^0.6.0",
     "uuid": "^9.0.0",
     "vue": "^3.2.47",
     "vue-router": "^4.1.6",
@@ -23,6 +28,7 @@
   },
   "devDependencies": {
     "@tailwindcss/forms": "^0.5.3",
+    "@types/clmtrackr": "^1.1.3",
     "@types/uuid": "^9.0.1",
     "@vitejs/plugin-vue": "^4.0.0",
     "@vue/cli-plugin-router": "~5.0.0",
